--- a/react/widgets/index.html
+++ b/react/widgets/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Widgets!</title>
 	<script type ="text/javascipt" src="bundle.js"></script>
 </head>
 <body>
+	<h1>Widgets</h1>
 	<div id='root'/>
 </body>
 </html>
