Initial calc commit

--- a/react/widgets/index.html
+++ b/react/widgets/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Widgets!</title>
-	<script type ="text/javascipt" src="bundle.js"></script>
+	<script type ="text/javascipt" src="./bundle.js"></script>
 </head>
 <body>
 	<h1>Widgets</h1>
