--- a/react/calculator/index.html
+++ b/react/calculator/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Calculator</title>
     <script src="bundle.js"></script>
   </head>
   <body>
