Fill out weather

--- a/react/widgets/index.html
+++ b/react/widgets/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Widgets!</title>
-	<script type ="text/javascipt" src="./bundle.js"></script>
-</head>
+	<head>
+		<title>Widgets!</title>
+		<script type ="text/javascipt" src="./app/assets/bundle.js"></script>
+	</head>
 <body>
 	<h1>Widgets</h1>
 	<div id="root">
