--- a/react/widgets/index.html
+++ b/react/widgets/index.html
@@ -2,12 +2,11 @@
 <html>
 	<head>
 		<title>Widgets!</title>
-		<script type ="text/javascipt" src="./app/assets/bundle.js"></script>
+		<script type ="text/javascipt" src="bundle.js"></script>
 	</head>
-<body>
-	<h1>Widgets</h1>
-	<div id="root">
-		Displaying: index#root
-	</div>
-</body>
+	<body>
+		<div id="main">
+			Displaying: index#root
+		</div>
+	</body>
 </html>
